# MC-rates

./: .editorconfig  CITATION.cff  LICENSE  README.md  __init__.py  pyproject.toml  rates_classes.py
MC_rates/: __init__.py  rates.py  rates_classes.py  rates_functions.py  sfh_chruslinska_nelemans.py  sfh_illustris.py  sfh_madau_fragos.py  snippet_rates.py
