[build-system]
requires = ["setuptools>=75.8", "numpy>=2.0", "pandas>=2.0", "astropy>=6.1.7", "scipy>=1.15.1", "tqdm", "h5py", "xarray"]
build-backend = "setuptools.build_meta"

[project]
name = "MC_rates"
version = "0.5.1"
authors = [
  { name="Duncan Maclean", email="dmaclean@unc.edu" },
]
description = "A package for calculating cosmological compact object merger rates using monte-carlo samples and star formation histories."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSD-2-Clause"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/d-maclean/MC-rates"
Issues = "https://github.cowm/d-maclean/MC-rates/issues"

[tool.setuptools.package-data]
MC_rates = ["TNG100_L75n1820TNG__x-t-log_y-Z-log.hdf5", "chruslinska_nelemans_data/*.dat"]
